tests/messages/valid/oru_r01.hl7
MSH|^~\&|LAB_APP|LAB_FAC|RECV_APP|RECV_FAC|20260220131500||ORU^R01|MSG0002|P|2.3
PID|1||1002^^^HOSP^MR||Doe^Jane||19920515|F
OBR|1||54321^LAB|WBC^White Blood Count|||20260220130000
OBX|1|NM|WBC^White Blood Count||7.5|10*3/uL|4.0-10.0|N|||F
