tests/messages/errors/err_oru_missing_obx11.hl7
MSH|^~\&|LAB_APP|LAB_FAC|RECV_APP|RECV_FAC|20260220135500||ORU^R01|MSG0009|P|2.3
PID|1||2002^^^HOSP^MR||Test^NoObxStatus||19900601|M
OBR|1||99999^LAB|TSH^Thyroid Stimulating Hormone|||20260220135500
OBX|1|NM|TSH^Thyroid Stimulating Hormone||2.5|mIU/L|0.4-4.0|N
